--- a/lost_password_html.html
+++ b/lost_password_html.html
@@ -454,7 +454,7 @@
                            <tr>
                              <td class="content-cell">
                                <div class="f-fallback">
-                                 <h1>Hi {{EMAIL}},</h1>
+                                 <h1>Ahoj {{EMAIL}},</h1>
                                  <p>Nedávno ste požiadali o resetovanie hesla pre svoj účet MCodeAcademy. Pomocou tlačidla nižšie ho resetujte. <strong>Toto resetovanie hesla je platné iba pre nasledujúcich 24 hodín.</strong></p>
                                  <!-- Action -->
                                  <table class="body-action" align="center" width="100%" cellpadding="0" cellspacing="0" role="presentation">
@@ -463,7 +463,7 @@
                                        <table width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
                                          <tr>
                                            <td align="center">
-                                             <a href='https://testdevmike.eu/change_password_bymail.php?email={{LINK}}' class="f-fallback button button--green" target="_blank">Reset your password</a>
+                                             <a href='https://testdevmike.eu/change_password_bymail.php?email={{LINK}}' class="f-fallback button button--green" target="_blank">Resetovať heslo</a>
                                            </td>
                                          </tr>
                                        </table>
